[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/Thing/Thing.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/ListOfThingsMenu/ListOfThingsMenu.gd" type="Script" id=2]

[node name="ListOfThingsMenu" type="Control"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
script = ExtResource( 2 )
THING = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.555
anchor_right = 1.0
margin_left = -0.320007
margin_top = 60.0
margin_right = -42.0
margin_bottom = 148.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 407.0
margin_bottom = 221.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 34.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 400.0
margin_bottom = 24.0
text = "List of ThingsÂ®"
align = 1

[node name="ThingsList" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 400.0
margin_bottom = 178.0

[node name="Thing" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
key = "FireRate"
value = "rof2"

[node name="Thing2" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 44.0
key = "Proj / Burst"
value = "proj-burst"

[node name="Thing3" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
margin_top = 48.0
margin_bottom = 68.0
key = "Velocity"
value = "speed2"

[node name="Thing4" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
margin_top = 72.0
margin_bottom = 92.0
key = "Damage"
value = "11 - 14"

[node name="Thing5" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
margin_top = 96.0
margin_bottom = 116.0
key = "Deviation"
value = "devi2"

[node name="Thing6" parent="PanelContainer/VBoxContainer/ThingsList" instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 140.0
key = "var1"
value = "var2"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 400.0
margin_bottom = 186.0

[node name="NewThingForm" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 400.0
margin_bottom = 214.0

[node name="NewKey" type="LineEdit" parent="PanelContainer/VBoxContainer/NewThingForm"]
unique_name_in_owner = true
margin_right = 134.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "New Key"

[node name="NewValue" type="LineEdit" parent="PanelContainer/VBoxContainer/NewThingForm"]
unique_name_in_owner = true
margin_left = 138.0
margin_right = 273.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "New Value"

[node name="NewThingButton" type="Button" parent="PanelContainer/VBoxContainer/NewThingForm"]
unique_name_in_owner = true
margin_left = 277.0
margin_right = 400.0
margin_bottom = 24.0
text = "Create New Thing"
